@@ -243,3 +243,4 @@ Olivier 'Babar' Raginel
 Steve Rader
 Dieter Van de Walle
 Jan Lipphaus
+Erik Welch
